style.css
html {
    visibility: hidden;
}

@font-face {
  font-family: 'Imbue';
  src: url('./fonts/Imbue.ttf') format('truetype');
  font-weight: normal;
  font-style: normal;
}

@font-face {
  font-family: 'InstrumentSerif';
  src: url('./fonts/InstrumentSerif-Regular.ttf') format('truetype');
  font-weight: normal;
  font-style: normal;
}

@font-face {
  font-family: 'things';
  src: url('./fonts/things.otf') format('truetype');
  font-weight: normal;
  font-style: normal;
}

@font-face {
  font-family: 'PlayfairDisplay';
  src: url('./fonts/PlayfairDisplay.ttf') format('truetype');
  font-weight: normal;
  font-style: normal;
}

@font-face {
  font-family: 'WindsorElongated';
  src: url('./fonts/WindsorElongated.ttf') format('truetype');
  font-weight: normal;
  font-style: normal;
}

body {
    font-family: serif;
    background-color: #f2ffd4;
    color: #364100;
    padding: 20px 20px;
    overflow:hidden;
}    

.flair {
  position: fixed;
  opacity: 0;
  width: 27px;
}

li:hover {
    text-decoration: underline;
    text-decoration-style: wavy;
    text-decoration-color: hotpink;
    text-decoration-thickness: 2px;
  }



a {
    color: rgb(56, 22, 51);
  }

 
.about {
  max-width: 600px;
  margin: 200px auto 0 auto;
  padding: 0 20px;
  font-size: 20px;
}

a:hover {
    text-decoration: underline;
    text-decoration-style: wavy;
    text-decoration-color: rgb(14, 99, 14);
    text-decoration-thickness: 2px;
  }



.bhanu:hover {
    text-decoration: underline;
    text-decoration-style: wavy;
    text-decoration-color: rgb(11, 107, 23);
    text-decoration-thickness: 5px;
}

.background {
  position: fixed;
    top: 110px;
    left: 300px;
    width: 800px;
    object-fit: cover;
    z-index: -1;
}

@media (max-width: 768px) {
  .background {
    display: none;
  }
}
.cloud-block {
  position: relative; /* parent anchor */
}


.cloud-img {
  display: block;
  width: 400px;
}

